# dge-ann

./: README.md  pyproject.toml
config/: main.yaml
config/process/: process_data_config.yaml
data/processed/: .gitignore  event.npy  event_type.npy  itemid.npy  product_id.npy  user_id.npy
data/raw/: sample.csv
notebooks/: NodeAttentionNetworks.ipynb
src/: constants.py  layers.py  model_utils.py  models 2.py  models.py  process.py
